@@ -1,3 +1,8 @@
+04/05/2012
+
+Added Smalltalk Compiler class to expose ability to evaluate strings of smalltalk source and answer the result of that 
+evaluation.
+
 03/05/2012
 
 Added capture of result of sending messages that embody a file, so direct evaluation of a string can be returned into Smalltalk.
